Atualizaçoes no codigo